--- a/src/styles/components/receipt-manager/personCell/ReceiptsTable.module.css
+++ b/src/styles/components/receipt-manager/personCell/ReceiptsTable.module.css
@@ -15,6 +15,30 @@
     overflow: hidden;
 }
 
+.headerSplit {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 16px;
+}
+
+.fancyButton {
+    width: 90px;
+    padding: 2px 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+}
+
+.bigTextInput {
+    font-size: 1.2rem;
+}
+
+.textInput {
+    font-size: 1rem;
+}
 
 .table {
     border-spacing: 0px;
