--- a/src/styles/components/receipt-manager/personCell/ReceiptsTable.module.css
+++ b/src/styles/components/receipt-manager/personCell/ReceiptsTable.module.css
@@ -1,10 +1,9 @@
 .receiptsTable {
     margin: 0 32px 64px 32px;
     width: calc(100% - 64px);
+    max-height: 80dvh;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     gap: 16px;
     padding-top: 16px;
@@ -12,7 +11,6 @@
     box-shadow: var(--shadowElevation_4);
     background-color: var(--bg-color-00);
     border-radius: var(--border-radius);
-    overflow: hidden;
 }
 
 .headerSplit {
@@ -21,6 +19,13 @@
     justify-content: space-between;
     width: 100%;
     padding: 0 16px;
+}
+
+.leftSide,
+.rightSide {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
 }
 
 .fancyButton {
@@ -46,13 +51,19 @@
     font-size: 1rem;
 }
 
+.tableWrapper {
+    border-top: 1px solid var(--bg-color-70);
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
 .table {
     border-spacing: 0px;
     width: 100%;
+    flex-grow: 1;
     outline: 1px solid var(--bg-color-50);
     background-color: var(--bg-color-00);
-
-    overflow: hidden;
 }
 
 .table th {
