--- a/src/styles/components/receipt-manager/personCell/ReceiptsTable.module.css
+++ b/src/styles/components/receipt-manager/personCell/ReceiptsTable.module.css
@@ -1,7 +1,7 @@
 .receiptsTable {
     margin: 0 32px 64px 32px;
     width: calc(100% - 64px);
-    max-height: 80dvh;
+    height: 80dvh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,7 +44,7 @@
 }
 
 .bigTextInput {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 .textInput {
@@ -68,7 +68,7 @@
 
 .table th {
     border-bottom: 1px solid var(--bg-color-70);
-    font-size: large;
+    font-size: 1.1rem;
     padding: 12px 4px;
 }
 
