--- a/src/styles/components/receipt-manager/ReceiptManager.module.css
+++ b/src/styles/components/receipt-manager/ReceiptManager.module.css
@@ -1,9 +1,15 @@
 /** @format */
 
 .receiptManager {
-    padding: 0;
-    width: 100%;
-    height: 100%;
+    width: 100dvw;
+    height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.isDone {
+    padding: 64px;
 }
 
 .center {
@@ -18,11 +24,21 @@
 
     justify-content: center;
     gap: 32px;
-    padding: 32px;
 }
 
-.personCell {
-    flex-grow: 1;
+.backButton {
+    padding: 8px !important;
+    margin: 0 !important;
+    background-color: var(--bg-color-00) !important;
+    border: none !important;
+    outline: 1px solid var(--bg-color-40);
+    box-shadow: var(--shadowElevation_4) !important;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    font-size: medium;
 }
 
 .personHeader {
