--- a/src/styles/components/receipt-manager/personCell/PersonCard.module.css
+++ b/src/styles/components/receipt-manager/personCell/PersonCard.module.css
@@ -1,7 +1,5 @@
 .personCard {
     padding: 24px 0;
-    flex-grow: 1;
-    height: 440px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -10,6 +8,7 @@
     outline: 1px solid var(--bg-color-40);
     box-shadow: var(--shadowElevation_4);
     gap: 24px;
+    width: 50%;
 }
 
 .fileControls {
