--- a/src/styles/components/receipt-manager/personCell/ReceiptsTable.module.css
+++ b/src/styles/components/receipt-manager/personCell/ReceiptsTable.module.css
@@ -1,16 +1,18 @@
 .receiptsTable {
-    margin: 0 32px 64px 32px;
-    width: calc(100% - 64px);
-    height: 80dvh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
     padding-top: 16px;
-    outline: 1px solid var(--bg-color-40);
-    box-shadow: var(--shadowElevation_4);
     background-color: var(--bg-color-00);
-    border-radius: var(--border-radius);
+}
+
+.personName {
+    font-size: large;
+    text-align: center;
+    max-width: 16ch;
 }
 
 .headerSplit {
