--- a/src/styles/components/receipt-manager/personCell/ReceiptsTable.module.css
+++ b/src/styles/components/receipt-manager/personCell/ReceiptsTable.module.css
@@ -49,10 +49,6 @@
     font-size: 1.1rem;
 }
 
-.textInput {
-    font-size: 1rem;
-}
-
 .tableWrapper {
     border-top: 1px solid var(--bg-color-70);
     width: 100%;
@@ -68,120 +64,47 @@
     background-color: var(--bg-color-00);
 }
 
-.table th {
+.table > :is(thead, tbody) > tr > th {
     border-bottom: 1px solid var(--bg-color-70);
     font-size: 1.1rem;
     padding: 12px 4px;
 }
 
-.table :is(th, td) {
+.table > :is(thead, tbody) > tr > :is(th, td) {
     word-break: keep-all;
     overflow: hidden;
 }
 
-.table td {
+.table > :is(thead, tbody) > tr > td {
     border-bottom: 1px solid var(--bg-color-40);
     padding: 8px 4px;
     width: fit-content;
     text-align: center;
 }
 
-.table :is(td, th):nth-child(1) {
+.table > :is(thead, tbody) > tr > :is(th, td):nth-child(1) {
     max-width: 30ch;
     min-width: 25ch;
     padding-left: 10px;
 }
 
-.table :is(td):nth-child(1) {
+.table > :is(thead, tbody) > tr > td:nth-child(1) {
     padding-left: 42px;
 }
 
-.table :is(td, th):nth-child(2) {
+.table > :is(thead, tbody) > tr > :is(th, td):nth-child(2) {
     text-align: end;
 }
 
-.table :is(td, th):nth-child(4) > button {
-    margin: 0 auto;
-}
-
-.table :is(td, th):is(:nth-child(4), :nth-child(6), :nth-child(5)) {
+.table > :is(thead, tbody) > tr > :is(th, td):is(:nth-child(4), :nth-child(6), :nth-child(5)) {
     padding: 8px 0px !important;
     min-width: 8ch;
 }
 
-.table :is(td, th):nth-child(4) button {
-    margin-left: 7px;
-    width: calc(100% - 8px);
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-}
-
-.table :is(td, th):nth-child(4) button.isSelected {
-    background-color: hsla(0, 100%, 73%, 0.508) !important;
-}
-
-.table :is(td, th):nth-child(5) button {
-    border-radius: 0;
-}
-
-.table :is(td, th):nth-child(5) button.isSelected {
-    background-color: rgba(97, 228, 92, 0.532) !important;
-}
-
-.table :is(td, th):nth-child(6) button {
-    margin-left: 1px;
-    width: calc(100% - 8px);
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-.table :is(td, th):nth-child(6) button.isSelected {
-    background-color: hsla(56, 92%, 64%, 0.534) !important;
-}
-
-.table :is(td, th):nth-child(7) {
+.table > :is(thead, tbody) > tr > :is(th, td):nth-child(7) {
     max-width: 25ch;
     min-width: 18ch;
     overflow: auto;
-}
-
-.table :is(td, th):nth-child(7) > div {
-    overflow: unset;
-    margin: 4px 8px 4px 4px;
-    box-shadow: var(--shadowElevation_2);
-    border-radius: 4px;
-}
-
-.table :is(td, th):nth-child(7) input {
-    box-shadow: none;
-    border-radius: 0;
-}
-
-.table td > div {
-    text-align: left;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-td.personTableCellHeader {
-    padding: 10px 5px !important;
-    font-weight: bold;
-    border-bottom-color: var(--bg-color-70);
-    background-color: var(--bg-color-05);
-}
-
-.toggleButton {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: hsla(0, 0%, 100%, 0.299);
-    outline: 1px solid var(--bg-color-60);
-}
-
-.toggleButton:hover {
-    background-color: hsla(0, 0%, 100%, 0.64);
 }
 
 /* Mobile */
@@ -190,18 +113,16 @@ td.personTableCellHeader {
         font-size: small;
     }
 
-    .table th,
-    .personTableCellHeader,
-    .table :is(td, th):nth-child(7) select {
+    .table > :is(thead, tbody) > tr > th {
         font-size: small;
     }
 
-    .table :is(td, th):nth-child(7) {
+    .table > :is(thead, tbody) > tr > :is(th, td):nth-child(7) {
         max-width: 20ch;
         min-width: 15ch;
     }
 
-    .table :is(td, th):nth-child(1) {
+    .table > :is(thead, tbody) > tr > :is(th, td):nth-child(1) {
         max-width: 25ch;
         min-width: 20ch;
         padding-left: 5px;
@@ -211,7 +132,6 @@ td.personTableCellHeader {
         padding: 4px 4px;
         font-size: small;
     }
-
 }
 
 @media (max-width: 860px) {
@@ -219,13 +139,11 @@ td.personTableCellHeader {
         font-size: x-small;
     }
 
-    .table th,
-    .personTableCellHeader,
-    .table :is(td, th):nth-child(7) select {
+    .table > :is(thead, tbody) > tr > th {
         font-size: smaller;
     }
 
-    .table td {
+    .table > :is(thead, tbody) > tr > td {
         padding: 6px 3px;
     }
 
@@ -236,18 +154,18 @@ td.personTableCellHeader {
 }
 
 @media (max-width: 760px) {
-    .table :is(td, th):nth-child(7) {
+    .table > :is(thead, tbody) > tr > :is(th, td):nth-child(7) {
         max-width: 10ch;
         min-width: 5ch;
     }
 
-    .table :is(td, th):nth-child(1) {
+    .table > :is(thead, tbody) > tr > :is(th, td):nth-child(1) {
         max-width: 15ch;
         min-width: 10ch;
         padding-left: 2px;
     }
 
-    .table td {
+    .table > :is(thead, tbody) > tr > td {
         padding: 4px 2px;
     }
 
@@ -259,23 +177,23 @@ td.personTableCellHeader {
 
 @media (max-width: 650px) {
 
-    .table :is(td, th):not(:nth-child(7), :nth-child(1), :nth-child(2)) {
+    .table > :is(thead, tbody) > tr > :is(th, td):not(:nth-child(7), :nth-child(1), :nth-child(2)) {
         max-width: 2ch;
         min-width: 10px;
     }
 
-    .table :is(td, th):nth-child(7) {
+    .table > :is(thead, tbody) > tr > :is(th, td):nth-child(7) {
         max-width: 5ch;
         min-width: 0ch;
     }
 
-    .table :is(td, th):nth-child(1) {
+    .table > :is(thead, tbody) > tr > :is(th, td):nth-child(1) {
         max-width: 10ch;
         min-width: 5ch;
         padding-left: 2px;
     }
 
-    .table td {
+    .table > :is(thead, tbody) > tr > td {
         padding: 2px 0px;
     }
 
@@ -285,19 +203,6 @@ td.personTableCellHeader {
     }
 }
 
-@media (max-width: 400px) {
-
-    .table td div {
-        max-width: 100px;
-    }
-}
-
-@media (max-width: 300px) {
-
-    .table td div {
-        max-width: 80px;
-    }
-}
 
 /* Tablet and Smaller Desktop */
 @media (min-width: 601px) and (max-width: 1120px) {}
